<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:id="@+id/ll_main_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="#444444"
            android:padding="25dp"
            android:orientation="vertical">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textColor="#6dffbf"
                android:padding="30dp"
                android:text="@string/tv_login"/>
        <EditText
                android:id="@+id/et_user_name"
                android:hint="@string/et_username"
                android:textColor="#6bfff7"
                android:textColorHint="#52afaa"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <EditText
                android:id="@+id/et_password"
                android:hint="@string/et_password"
                android:textColor="#6bfff7"
                android:textColorHint="#52afaa"
                android:textAlignment="center"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="25dp"
                android:orientation="horizontal">
            <Button
                    android:id="@+id/btn_reset"
                    android:text="@string/btn_reset"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            <Button
                    android:id="@+id/btn_submit"
                    android:text="@string/btn_submit"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>