<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/tvClassDate"
            android:layout_width="300dp"
            android:layout_height="30dp"
            android:id="@+id/tvClassDate" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.473"
            app:layout_constraintVertical_bias="0.028" android:textAlignment="center"/>
    <TextView
            android:text="@string/tvClassAttendants"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:id="@+id/tvClassAttendants" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="52dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="652dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.004" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"
            android:textAlignment="center"/>
    <TextView
            android:text="@string/tvClassTotalStudents"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:id="@+id/tvClassTotalStudents" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="48dp"
            android:layout_marginBottom="652dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.946" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0"
            android:textAlignment="center"/>

    <GridView
            android:id="@+id/gvStudents"
            android:layout_width="wrap_content"
            android:layout_height="381dp"
            android:columnWidth="200dp"
            android:horizontalSpacing="15dp"
            android:numColumns="auto_fit"
            android:verticalSpacing="15dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.859"
    />
    <ImageView
            android:layout_width="251dp"
            android:layout_height="184dp" app:srcCompat="@drawable/ic_launcher_background"
            android:id="@+id/qrClass"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvClassDate" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/gvStudents"
            app:layout_constraintVertical_bias="0.739" android:contentDescription="@string/classQR"/>
    <Button
            android:text="Active Class"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:id="@+id/activeClassBtn" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/gvStudents" app:layout_constraintBottom_toBottomOf="parent"
            android:background="@android:color/holo_blue_light" app:layout_constraintHorizontal_bias="0.333"
            app:layout_constraintVertical_bias="0.0"/>

    <!--<GridView-->
            <!--android:id="@+id/gvStudentSummary"-->
            <!--android:layout_width="353dp"-->
            <!--android:layout_height="280dp"-->
            <!--android:columnWidth="300dp"-->
            <!--android:horizontalSpacing="15dp"-->
            <!--android:numColumns="auto_fit"-->
            <!--android:verticalSpacing="15dp"-->
            <!--android:layout_marginBottom="8dp"-->
            <!--app:layout_constraintBottom_toBottomOf="parent" android:layout_marginStart="8dp"-->
            <!--app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--android:layout_marginTop="8dp"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/gvClasses" app:layout_constraintVertical_bias="0.507"/>-->

</android.support.constraint.ConstraintLayout>